# machine_learning_01

./: README.md  machine_learning_01.ipynb  pyproject.toml
machine_learning_01/: main.py
