[tool.poetry]
name = "machine_learning_01"
version = "0.1.0"
description = ""
authors = ["Jim Koch <jimkoch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.3"
six = "^1.15.0"
tensorflow = "2.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "machine_learning_01.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
